# neuralscope

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.prod.yml  package-lock.json  package.json  render.yaml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
apps/server/: Cargo.toml
apps/server/migrations/: 20250629160000_git_commits_schema.sql
apps/server/src/: lib.rs
apps/server/src/ai/application/tools/: observability.rs
apps/server/src/api/: router.rs
apps/server/src/chat/presentation/: handlers.rs
apps/server/src/common/: config.rs
apps/server/src/git/application/: mod.rs  service.rs
apps/server/src/git/presentation/: handlers.rs  routes.rs
apps/server/src/mcp/: mod.rs  protocol.rs  server.rs
apps/web/: eslint.config.mjs  instrumentation.ts  middleware.ts  package.json
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(dashboard)/git/: page.tsx
apps/web/app/(dashboard)/logs/: page.tsx
apps/web/app/api/health/: route.ts
apps/web/components/layout/: sidebar.tsx
apps/web/features/git/: git-history-panel.tsx
apps/web/features/settings/: settings-panel.tsx
apps/web/lib/: auth.ts
apps/web/services/: git.ts
docs/: DEPLOY-RENDER.md  DEPLOYMENT.md  MCP.md
infra/docker/: Dockerfile.server
infra/k8s/: configmap.yaml  migration-job.yaml  secret.yaml.example  server-deployment.yaml  web-deployment.yaml
