[package]
name = "neuralscope-server"
version = "0.1.0"
edition = "2021"
description = "NeuralScope backend — AI-powered developer observability"
license = "MIT"
authors = ["NeuralScope Contributors"]

[[bin]]
name = "neuralscope-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip", "set-header"] }
dashmap = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
config = "0.14"

# Auth
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
tower-cookies = "0.11"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "17"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
